--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -53,7 +54,7 @@
           </h2>
         </div>
         <div class="hero-img">
-          <img src="Images/estate2.jpg" />
+          <!-- <img src="asset/estate2.jpg" alt="Estate Image" /> -->
         </div>
       </header>
     </div>
